[gd_scene load_steps=12 format=3 uid="uid://cyqo3o1wu73gw"]

[ext_resource type="Script" path="res://material_maker/panels/layers/layers_tree.gd" id="1"]
[ext_resource type="Script" path="res://material_maker/panels/layers/layers.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://c0j4px4n72di5" path="res://material_maker/icons/icons.tres" id="3"]
[ext_resource type="Texture2D" path="res://material_maker/panels/layers/icons/layer_paint.tres" id="3_sfh50"]
[ext_resource type="Texture2D" path="res://material_maker/panels/layers/icons/layer_proc.tres" id="4_v74tb"]
[ext_resource type="Texture2D" path="res://material_maker/panels/layers/icons/layer_mask.tres" id="5_necu2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wup27"]
atlas = ExtResource("3")
region = Rect2(160, 128, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2qprl"]
atlas = ExtResource("3")
region = Rect2(48, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o26h6"]
atlas = ExtResource("3")
region = Rect2(112, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pipkg"]
atlas = ExtResource("3")
region = Rect2(96, 160, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_76tq8"]
atlas = ExtResource("3")
region = Rect2(80, 160, 16, 16)

[node name="Layers" type="PanelContainer" groups=["layers"]]
offset_top = 224.0
offset_right = 150.0
offset_bottom = 224.0
theme_type_variation = &"MM_PanelBackground"
script = ExtResource("2")

[node name="Layers" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Layers"]
layout_mode = 2
theme_type_variation = &"MM_PanelBackground"

[node name="Buttons" type="HBoxContainer" parent="Layers/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="Add" type="MenuButton" parent="Layers/PanelContainer/Buttons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = SubResource("AtlasTexture_wup27")
flat = false
icon_alignment = 1
item_count = 3
popup/item_0/text = "Paint Layer"
popup/item_0/icon = ExtResource("3_sfh50")
popup/item_1/text = "Procedural Layer"
popup/item_1/icon = ExtResource("4_v74tb")
popup/item_1/id = 1
popup/item_2/text = "Mask Layer"
popup/item_2/icon = ExtResource("5_necu2")
popup/item_2/id = 2

[node name="Duplicate" type="Button" parent="Layers/PanelContainer/Buttons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"MM_Button"
icon = SubResource("AtlasTexture_2qprl")
icon_alignment = 1

[node name="Remove" type="Button" parent="Layers/PanelContainer/Buttons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
icon = SubResource("AtlasTexture_o26h6")
icon_alignment = 1

[node name="Down" type="Button" parent="Layers/PanelContainer/Buttons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
icon = SubResource("AtlasTexture_pipkg")
icon_alignment = 1

[node name="Up" type="Button" parent="Layers/PanelContainer/Buttons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
icon = SubResource("AtlasTexture_76tq8")
icon_alignment = 1

[node name="Tree" type="Tree" parent="Layers" groups=["layers"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 200)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
focus_mode = 0
columns = 2
select_mode = 1
script = ExtResource("1")

[connection signal="pressed" from="Layers/PanelContainer/Buttons/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="Layers/PanelContainer/Buttons/Duplicate" to="." method="_on_Duplicate_pressed"]
[connection signal="pressed" from="Layers/PanelContainer/Buttons/Remove" to="." method="_on_Remove_pressed"]
[connection signal="pressed" from="Layers/PanelContainer/Buttons/Down" to="." method="_on_Down_pressed"]
[connection signal="pressed" from="Layers/PanelContainer/Buttons/Up" to="." method="_on_Up_pressed"]
[connection signal="button_clicked" from="Layers/Tree" to="Layers/Tree" method="_on_Tree_button_pressed"]
[connection signal="cell_selected" from="Layers/Tree" to="Layers/Tree" method="_on_Tree_cell_selected"]
[connection signal="gui_input" from="Layers/Tree" to="Layers/Tree" method="_on_Tree_gui_input"]
[connection signal="item_edited" from="Layers/Tree" to="Layers/Tree" method="_on_Tree_item_edited"]
[connection signal="item_selected" from="Layers/Tree" to="Layers/Tree" method="_on_Tree_cell_selected"]
[connection signal="selection_changed" from="Layers/Tree" to="." method="_on_Tree_selection_changed"]
